# holoweb

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  GET  README.MD  config.yaml  docker-compose.local.yml  docker-compose.remote.yml  docker-compose.yml  package-lock.json
.github/workflows/: deploy.yml  general.yml  integration-testing.yml  system-testing.yml
config/: base.yml  production.yml
internal/: account.html  blog_post.html  blog_posts.html  small.html
migrations/2022-02-06-175922_add_users/: up.sql
migrations/2022-03-14-155446_add_posts/: down.sql  up.sql
migrations/2022-03-18-195855_create_structure/: down.sql  up.sql
scripts/: create_post.sh  init_db.sh  system_test_api.sh  test.sh
src/: actions.rs  config.rs  error.rs  error_handlers.rs  handlers.rs  lib.rs  main.rs  markdown.rs  models.rs  router.rs  schema.rs  services.rs  session.rs  startup.rs  telemetry.rs  templates.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: blog_posts.rs  comments.rs  credentials.rs  hashed_user_password.rs  mod.rs  new_user.rs  projects.rs  resource_id.rs  stored_credentials.rs  time.rs  user.rs  user_email.rs  user_id.rs  user_name.rs  user_password.rs  user_password_salt.rs  users.rs
src/domain/blog_posts/: blog_post.rs  blog_post_id.rs  blog_post_visibility.rs  mod.rs  new_blog_post.rs  update_blog_post.rs
src/domain/comments/: comment.rs  comment_id.rs  comment_view.rs  mod.rs  new_comment.rs  update_comment.rs
src/middleware/: authentication.rs  flash_messages.rs  messages.rs  mod.rs  session.rs
src/routes/: account.rs  blog_posts.rs  change_name.rs  change_password.rs  comments.rs  error_handlers.rs  health_check.rs  home.rs  login.rs  logout.rs  mod.rs  projects.rs  registration.rs  users.rs
src/services/: blog_posts.rs  comments.rs  credentials.rs  mod.rs  password.rs  projects.rs  users.rs
static/css/: registration.css
static/js/: base.js  blog_post.js  blog_posts.js  login.js  registartion.js
static/lib/: semantic.min.js
templates/: 404.html  account.html  account_settings.html  base.html  blog_post.html  blog_posts.html  change_name.html  change_password.html  comment.html  create_blog_post.html  edit_blog_post.html  error_page.html  home.html  index.html  login.html  posts.html  project.html  registration.html  user.html
tests/: health_check.rs  main.rs
tests/api/: account.rs  blog_posts.rs  change_name.rs  change_password.rs  comments.rs  health_check.rs  helpers.rs  login.rs  logout.rs  main.rs  mod.rs
tests/data/: render_comments_render_comment.html  render_comments_render_multiple_levels_of_nesting_and_multiple_children.html  render_comments_render_multiple_replies.html  render_comments_render_multiple_toplevel_comments.html  render_comments_render_reply.html
tests/helpers/: mod.rs  test_app.rs  test_blog_post.rs  test_comment.rs  test_user.rs
tests/integration/: main.rs
tests/internal/: main.rs
tests/services/: blog_posts.rs  comments.rs  mod.rs  users.rs
(+85 files in other folders)
