[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2", "uuidv07", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
actix-files = "0.6.0"
askama = "0.11.0"
secrecy = "0.8.0"
chrono = { version = "0.4.19", features = ["serde"] }
