[package]
name = "holosite"
version = "0.1.0"
edition = "2021"
authors = ["Ilya Vinogradov <holodmoose@gmail.com>"]


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "holosite"

[dependencies]
actix-web = "4"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2", "uuidv07", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
actix-files = "0.6.0"
askama = "0.11.0"
secrecy = { version = "0.8.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
htmlescape = "0.3.1"
hex = "0.4.3"
anyhow = "1.0.56"
urlencoding = "2.1.0"
hmac = "0.12.1"
sha2 = "0.10.2"
config = "0.12.0"

[dev-dependencies]
reqwest = "0.11.10"
tokio = "1.17.0"