[package]
name = "holosite"
version = "0.1.0"
edition = "2021"
authors = ["Ilya Vinogradov <holodmoose@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "holosite"

[dependencies]
actix-web = "4"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2", "uuidv07"] }
log = "0.4"
tracing = { version = "0.1.32", featurs = ["log"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
actix-files = "0.6.0"
askama = "0.11.0"
secrecy = { version = "0.8.0", features = ["serde"] }
derive_more = "0.99.17"
anyhow = "1.0.56"
hmac = "0.12.1"
sha3 = "0.10.1"
config = "0.12.0"
tracing-log = "0.1.2"
tracing-bunyan-formatter = "0.3.2"
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }
once_cell = "1.10.0"
tracing-actix-web = "0.5.1"
validator = "0.14.0"
unicode-segmentation = "1.9.0"
thiserror = "1.0.30"
actix-session = { git = "https://github.com/actix/actix-extras", branch = "master", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.15.0"
actix-web-flash-messages = { version = "0.3.2", features = ["cookies"] }
futures-util = "0.3.21"
num_cpus = "1.13.1"

[dev-dependencies]
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = "1.17.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
claim = "0.5.0"
diesel_migrations = "1.4.0"

